Reading name from conf file modified

--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -25,7 +25,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd} %5p [%t] (%F:%L) -
 #### Appender writes to a file
 #log4j.appender.R=org.apache.log4j.FileAppender
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=logs/N42MysqlMetrics.log
+log4j.appender.R.File=logs/RTplugin.log
 # Control the maximum log file size
 log4j.appender.R.MaxFileSize=100KB
 # Archive log files (one backup file here)
